add bill form friends dropdown

--- a/app/assets/stylesheets/components/bill/add_bill_form.scss
+++ b/app/assets/stylesheets/components/bill/add_bill_form.scss
@@ -39,6 +39,11 @@
     font-size: 16px;
 }
 
+.friend-list-selector{
+    display: flex;
+    flex-direction: column;
+}
+
 .category-icon-medium {
   width: 90px;
   margin-left: 18px;
