--- a/app/assets/stylesheets/components/bill/add_bill_form.scss
+++ b/app/assets/stylesheets/components/bill/add_bill_form.scss
@@ -15,6 +15,7 @@
 
 .close-x:hover {
     cursor: pointer;
+    transform: scale(1.05);
 }
 
 .add-bill-friends{
@@ -149,6 +150,18 @@ margin-right: 12px;
   display: flex;
 }
 
+.friend-list-selector {
+    background-color: rgb(246, 241, 241);
+    color: rgb(99, 98, 98);
+    border-style: dashed;
+    border-radius: 10px;
+    
+}
+
+.friend-list-selector-item {
+    margin-top: 2px;
+}
+
 .paidby-selector {
     background-color: rgb(246, 241, 241);
     color: #5cc5a7;
@@ -158,7 +171,7 @@ margin-right: 12px;
     margin-right: 3px;
     text-rendering: optimizeLegibility;
     text-align: center;
-    width: 35px;
+    width: 65px;
 
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -166,6 +179,7 @@ margin-right: 12px;
 
 .paidby-selector:hover {
     cursor: pointer;
+    transform: scale(1.1);
 }
 
 .details-2-middle {
@@ -190,7 +204,7 @@ margin-right: 12px;
 
 .add-bill-save {
     background-color: #5cc5a7;
-    color: rgb(235, 229, 229);
+    color: rgb(249, 247, 247);
     margin-left: 3px;
     border: 1px solid rgb(200, 196, 196);
     font-size: 14px;
@@ -206,4 +220,5 @@ margin-right: 12px;
 
 .add-bill-save:hover, .add-bill-cancel:hover {
     cursor: pointer;
+    transform: scale(1.1);
 }
