--- a/app/assets/stylesheets/components/bill/bill_index_item.scss
+++ b/app/assets/stylesheets/components/bill/bill_index_item.scss
@@ -1,8 +1,14 @@
 @import url( href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family='IBM Plex Serif'&display=swap");
 
+.bill-item-header-left {
+  margin-top: 5px;
+}
+
 
 .category_choose_icon_1 {
-  height: 30px
+  height: 60px;
+  width: 60px;
+  margin-top: 5px;
 }
 
 // expense index start 
