bill index testing

--- a/app/assets/stylesheets/components/bill/bill_index_item.scss
+++ b/app/assets/stylesheets/components/bill/bill_index_item.scss
@@ -6,14 +6,14 @@
 
 
 .category_choose_icon_1 {
-  height: 60px;
-  width: 60px;
-  margin-top: 5px;
+  height: 50px;
+  width: 50px;
+  margin-top: 8px;
 }
 
 // expense index start 
 .bill-item {
-  font-family: Lato; 
+  font-family: 'Helvetica Neue'; 
   // padding: 5px;
 }
 
@@ -22,7 +22,7 @@
   justify-content: space-between;
   height: 58px;
   align-items: center;
-  font-family: Lato;
+  font-family: 'Helvetica Neue';
   border-top: 1.5px solid rgb(201, 196, 196);
   font-size: 15px;
   // border: 1px solid grey;
@@ -64,7 +64,7 @@
 }
 
 .bill-portion-amount {
-  font-family: Lato;
+  font-family: 'Helvetica Neue';
   font-size: 11px;
   color: rgb(242, 240, 240);
 }
@@ -79,7 +79,7 @@
   font-size: 15px;
   font-weight: 550;
 }
-.bill-lent-amount::before {
+.bill-portion-amount::before, .bill-lent-amount::before {
   content:"$";
 }
 
