--- a/app/assets/stylesheets/components/bill/bill_index_item.scss
+++ b/app/assets/stylesheets/components/bill/bill_index_item.scss
@@ -165,3 +165,18 @@
 .bill-item-right {
   line-height: 1.3
 }
+
+.remove-bill-btn {
+  width: 130px; 
+  height: 25px;
+  font-family: 'Helvetica Neue';
+  font-size: 12px;
+  margin-left: 12px;
+  margin-top: 19px;
+  color: rgb(63, 62, 62);
+}
+
+.remove-bill-btn:hover {
+  cursor: pointer;
+  transform: scale3d(1.01,1.01,1.01);
+}
