working on comment list + friends_list on bill

--- a/app/assets/stylesheets/components/comment/add_comment_form.scss
+++ b/app/assets/stylesheets/components/comment/add_comment_form.scss
@@ -53,4 +53,7 @@
 
 .add-comment-submit:hover {
   cursor: pointer;
+  color: rgb(98, 95, 95);
+  background-color:  rgb(181, 177, 177);
+  transform: scale3d(1.1, 1.1, 1.1);
 }
