--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
       window.action3_screen = "<%= image_url('action3_screen.png') %>";
       window.action4 = "<%= image_url('action4.jpg') %>";
       window.action4_screen = "<%= image_url('action4_screen.png') %>";
+      window.adding_friend_bill = "<%= image_url('adding_friend_bill.gif') %>";
       window.airplane_icon = "<%= image_url('airplane_icon.ico') %>";
       window.airplane_img = "<%= image_url('airplane.png') %>";
       window.airplane_img2 = "<%= image_url('airplane_img2.png') %>";
@@ -43,6 +44,7 @@
       window.dropdown_arrow = "<%= image_url('dropdown_arrow.png') %>";
       window.doge = "<%= image_url('doge.png') %>";
       window.envelope_icon = "<%= image_url('envelope_icon.png') %>";
+      window.favicon = "<%= image_url('favicon.ico') %>";
       window.footer_background = "<%= image_url('footer_background.png') %>";
       window.github_icon = "<%= image_url('github.svg')%>";
       window.green_tiles = "<%= image_url('green_tiles.png') %>";
