--- a/app/assets/stylesheets/components/comment/comment_list.scss
+++ b/app/assets/stylesheets/components/comment/comment_list.scss
@@ -17,7 +17,7 @@
   background-color: #ffffe9;
   padding: 4px;
   border-radius: 5px;
-  border-style: solid;
+  border-style: groove;
   border-width: 1px;
   border-color: #999;
 }
@@ -33,6 +33,27 @@
   font-weight: 200;
   font-size: 12px;
   opacity: 0.7;
+}
+
+.comment-delete{
+  margin-left: auto;
+  background-color: #ffffe9;
+  border: none;
+}
+
+.comment-delete:hover{
+  cursor: pointer;
+  transform: scale3d(1.2, 1.2, 1.2);
+}
+
+.comment-delete-button{
+  width: 10px;
+  height: 10px;
+  background-color: #ffffe9;
+  color: #c00;
+  border: none;
+  font-weight: 500;
+  font-size: 15px;
 }
 
 .comment-item-comment{
