--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,15 @@
       </script>
     <% end %>
 
+    <meta property="og:title" content=".split()" />
+    <meta property='og:image' content="<%= image_url('splash_screen.png') %>"/>
+    <meta property="og:description"
+      content="A brief description of your project."
+    />
+    <meta property="og:url"
+      content="http://splitsplit.herokuapp.com/"
+    />
+
     <script type="text/javascript">
       // rake assets:precompile  to generate assets
       window.account_icon = "<%= image_url('account_icon.png') %>";
